plugins {
    id "java-library"
    id "maven-publish"
    id "net.neoforged.moddev.legacyforge" version "2.0.94"
    id 'org.jetbrains.kotlin.jvm'
    id "idea"
}

tasks.named("wrapper", Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id
base.archivesName = mod_id

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

legacyForge {
    version = project.minecraft_version + '-' + project.forge_version
    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }
    accessTransformers {
        file("src/main/resources/META-INF/accesstransformer.cfg")
    }
    runs {
        var mod_id = mod_id as String
        client {
            client()
            systemProperty "forge.enabledGameTestNamespaces", mod_id
        }
        server {
            server()
            programArgument "--nogui"
            systemProperty "forge.enabledGameTestNamespaces", mod_id
        }
        gameTestServer {
            type = "gameTestServer"
            systemProperty "forge.enabledGameTestNamespaces", mod_id
        }
        data {
            data()
            programArguments.addAll "--mod", mod_id, "--all", "--output", file("src/generated/resources/").getAbsolutePath(), "--existing", file("src/main/resources/").getAbsolutePath()
        }
        configureEach {
            systemProperty "forge.logging.markers", "REGISTRIES"
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }
    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    maven { url = 'https://alcatrazescapee.jfrog.io/artifactory/mods' }
    maven { url = "https://cursemaven.com" }
    mavenCentral()
}

dependencies {
    annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
    modRuntimeOnly "curse.maven:cyanide-541676:5778405"
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             forge_version          : forge_version,
                             forge_version_range    : forge_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    filesMatching(["META-INF/mods.toml"]) {
        expand replaceProperties
    }
}

jar {
    manifest {
        attributes(['Specification-Title'     : mod_id,
                    'Specification-Vendor'    : mod_authors,
                    'Specification-Version'   : '1', // We are version 1 of ourselves
                    'Implementation-Title'    : project.name,
                    'Implementation-Version'  : mod_version,
                    'Implementation-Vendor'   : mod_authors,
                    'Implementation-Timestamp': new Date().format('yyyy-MM-dd\'T\'HH:mm:ssZ'),
                    'MixinConfigs'            : "${mod_id}.mixins.json"])
    }
}

publishing {
    publications {
        register("mavenJava", MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

kotlin {
    jvmToolchain(17)
}